fixed author description too long problem

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -140,3 +140,11 @@ section{
 {
   white-space:pre-wrap;
 }
+
+/*.hide-long-text
+{
+  overflow: hidden;
+  white-space: nowrap; 
+  text-overflow: ellipsis;
+  height: 300px;
+}*/
